# nvim_config

./: Cargo.toml  init.lua
lua/: plugins.lua  settings.lua
src/: certificate_authority.rs  main.rs
