[package]
name = "crypto_sign_with_gost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.20.7"
ring = "0.16.20"
actix-web = "4"
lazy_static = "1.4.0"
actix-multipart = "0.5.0"
#tokio = "1.25.0"
futures-util = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
hex = "0.4.3"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]